A version that actually fucking works

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,15 +5,18 @@
   <title>Patient Data</title>
 </head>
 <body>
-<h2>Welcome to the Patient Data App</h2>
+<h2>NoteS</h2>
 
 <nav>
   <ul>
     <li>
-      <a href="patientList.html">View the Patient ID List</a>
+      <a href="/viewNotes">View Notes</a>
     </li>
     <li>
-      <a href="search.html">Search</a>
+      <a href="noteadd.html">Add Note</a>
+    </li>
+    <li>
+      <a href="search.html">Search Notes</a>
     </li>
   </ul>
 </nav>
