--- a/src/main/webapp/search.html
+++ b/src/main/webapp/search.html
@@ -1,15 +1,15 @@
-
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <title>Patient Data App</title>
+  <meta charset="UTF-8">
+  <title>Search Notes</title>
 </head>
 <body>
-<div class="main">
-  <h1>Search</h1>
-  <form method="POST" action="/runsearch.html">
-    <input type="text" name="searchstring" placeholder="Enter search keyword here"/>
-    <input type="submit" value="Search"/>
-  </form>
-</div>
+<h2>Search Notes</h2>
+<form action="searchNotes" method="post">
+  <label for="query">Search:</label>
+  <input type="text" id="query" name="query" required><br>
+  <button type="submit">Search</button>
+</form>
 </body>
 </html>
